grammar.js
    translation_unit: $ => repeat($._context),

    _context: $ => choice(
      $.compound_statement,
      $.function_definition,
      $.object_definition,
      $._empty_declaration,
      $.type_definition,
      alias($.preproc_if_in_top_level, $.preproc_if),
      alias($.preproc_ifdef_in_top_level, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_using,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    _block_item: $ => choice(
      $.statement,
      $._empty_declaration,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    // Preprocesser

    preproc_def: $ => seq(
      preprocessor('define'),
      field('name', $.identifier),
      field('value', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    preproc_call: $ => seq(
      field('directive', $.preproc_directive),
      field('argument', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    ...preprocIf('', $ => $._block_item),
    ...preprocIf('_in_top_level', $ => $._context),
    ...preprocIf('_in_field_declaration_list', $ => $._field_declaration_list_item),
    ...preprocIf('_in_enumerator_list', $ => seq($.enumerator, ',')),
    ...preprocIf('_in_enumerator_list_no_comma', $ => $.enumerator, -1),
    ...preprocIf('_in_gins_attributes_list_item', $ => $._gins_attributes_list_item),

    preproc_arg: _ => token(prec(-1, /\S([^/\n]|\/[^*]|\\\r?\n)*/)),
    preproc_directive: _ => /#[ \t]*[a-zA-Z0-9]\w*/,

    object_definition: $ =>  seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      field('type', $._class_definition),
      commaSep1(field('declarator', choice($._declarator, $.init_declarator))),
      ';',
    ),

    type_definition: $ => seq(
      'typedef',
      field('type', $._class_definition),
      commaSep(field('declarator', choice($._declarator, $.init_declarator))),
      ';',
    ),

    _class_definition: $ => choice(
      seq(
        optional(field('class_modifier', $.class_modifier)),
        $._class_name,
      ),
      $._gtop_class,
      $._gins_class,
      $.class_specifier,
      $.union_specifier,
      $.struct_specifier,
      $.enum_specifier,
    ),

    storage_class_specifier: $ => repeat1(choice(
      'static',
      'auto',
      'register',
      'const',
      'extern',
      'global',
      'universal',
      'private',
      'protected',
      'public',
      'virtual',
    )),

    class_modifier: $ => repeat1(choice(
      'signed',
      'unsigned',
    )),

    _declarator: $ => choice(
      $._direct_declarator,
      $.pointer_declarator,
      $.array_declarator,
      $.function_declarator,
      $.parenthesized_declarator,
    ),

    pointer_declarator: $ => prec.dynamic(1, prec.right(seq(
      choice('*', '&'),
      field('declarator', $._declarator),
    ))),

    array_declarator: $ => prec(1, seq(
      field('declarator', $._declarator),
      '[',
      optional(field('size', $.expression)),
      ']',
    )),

    function_declarator: $ => prec.right(1, seq(
      field('declarator', $._declarator),
      field('parameters', $.parameter_list),
    )),

    qualified_declarator: $ => seq(
      field('scope', 
        choice(
          $.identifier,
          $._class_name,
          $._gtop_class,
          $._gins_class,
        )
      ),
      '::',
      optional(seq(
        field('instance', $.instance_name),
        '::',
      )),
      field('name', choice(
        $.identifier,
        $.operator_declarator,
        $.conversion_declarator,
        $._class_name,
        $.destructor_name,
      )),
    ),

    instance_name: $ => choice(
      $.identifier,
      seq($.identifier, '.', $.instance_name),
    ),

    parameter_list: $ => seq(
      '(',
      optional(choice(
        seq(
          commaSep1($.parameter_declaration),
          optional(','),
          optional('...'),
        ),
        '...',
      )),
      ')',
    ),

    // Preserve unnamed parameter types instead of constructor-style arguments.
    // Keep the preference here so empty declarators retain macro error recovery.
    parameter_declaration: $ => prec.dynamic(2, choice(
      seq(
        optional(field('storage_class', 'const')),
        field('type', $._class_definition),
        optional(field('declarator', choice($._declarator, $.init_declarator)))
      ),
      seq(
        optional('const'),
        field('type', $._class_definition),
        optional(field('declarator', $.abstruct_declarator))
      ),
    )),

    operator_declarator: $ => seq(
      'operator',
      field('operator', choice(
        '+',
        '-',
        '*',
        '/',
        '%',
        '<<',
        '>>',
        '&',
        '|',
        '^',
        '==',
        '!=',
        '>',
        '<',
        '>=',
        '<=',
        '!',
        '~',
        '++',
        '--',
        '=',
        '.*',
        '->*',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
        '<<=',
        '>>=',
        '&=',
        '|=',
        '^=',
        seq('[', ']'),
        seq('(', ')'),
      )),
    ),

    destructor_name: $ => seq(
      '~',
      field('name', $._class_name),
    ),

    conversion_declarator: $ => seq(
      'operator',
      field('type', choice(
        $._class_name,
      )),
    ),

    function_definition: $ => seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      optional(field('type', $._class_definition)),
      field('declarator', $._declarator),
      field('body', $.compound_statement),
    ),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    class_specifier: $ => seq(
      'class',
      $._class_declaration,
    ),

    union_specifier: $ => seq(
      'union',
      $._class_declaration,
    ),

    struct_specifier: $ => seq(
      'struct',
      $._class_declaration,
    ),

    _class_declaration: $ => prec.right(seq(
      choice(
        field('name', $._class_name),
        seq(
          optional(field('name', $._class_name)),
          optional($.base_class_clause),
          field('body', $.field_declaration_list),
        ),
      ),
    )),

    base_class_clause: $ => seq(
      ':',
      commaSep1(seq(
        optional(field('access_specifier', $.access_specifier)),
        $._classref,
      )
    )),

    access_specifier: _ => choice(
      'public',
      'private',
      'protected',
    ),

    field_declaration_list: $ => seq(
      '{',
      repeat($._field_declaration_list_item),
      '}',
    ),

    _field_declaration_list_item: $ => choice(
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_field_declaration_list, $.preproc_if),
      alias($.preproc_ifdef_in_field_declaration_list, $.preproc_ifdef),
      $._empty_declaration,
      alias($.object_definition, $.field_declaration),
      $.function_definition,
      $.type_definition,
      $.gins_definition,
      seq($.access_specifier, ':'),
    ),

    gins_definition: $ => seq(
      field('type', $._gins_class),
      optional(field('name', $.identifier)),
      seq(
        '{',
        repeat($._gins_attributes_list_item),
        '}',
      ),
      ';',
    ),

    _gins_attributes_list_item: $ => choice(
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_gins_attributes_list_item, $.preproc_if),
      alias($.preproc_ifdef_in_gins_attributes_list_item, $.preproc_ifdef),
      alias($.object_definition, $.gins_definition),
      alias($.function_definition, $.gins_attributes_definition),
      $.gins_definition,
    ),

    enum_specifier: $ => seq(
      'enum',
      choice(
        seq(
          field('name', $._class_name),
          optional(field('body', $.enumerator_list)),
        ),
        field('body', $.enumerator_list),
      ),
    ),

    enumerator_list: $ => seq(
      '{',
      repeat(choice(
        seq($.enumerator, ','),
        alias($.preproc_if_in_enumerator_list, $.preproc_if),
        alias($.preproc_ifdef_in_enumerator_list, $.preproc_ifdef),
        seq($.preproc_call, ','),
      )),
      optional(seq(
        choice(
          $.enumerator,
          alias($.preproc_if_in_enumerator_list_no_comma, $.preproc_if),
          alias($.preproc_ifdef_in_enumerator_list_no_comma, $.preproc_ifdef),
          $.preproc_call,
        ),
      )),
      optional(','),
      '}',
    ),

    enumerator: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '=',
        field('value', $.expression),
      )),
    ),

    // Statements

    expression_statement: $ => seq(
      optional(choice(
        $.expression,
        $.comma_expression,
      )),
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional(choice($.expression, $.comma_expression)),
      ';',
    ),

    _assignment_left_expression: $ => choice(
      $.identifier,
      // Assignability is a semantic property, including for literal targets.
      $.primary,
      $.call_expression,
      $.field_expression,
      $.pointer_expression,
      $.subscript_expression,
      $.parenthesized_expression,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '&=',
        '^=',
        '|=',
      )),
      field('right', $.expression),
    )),

    pointer_expression: $ => prec.left(PREC.CAST, seq(
      field('operator', choice('*', '&')),
      field('argument', $.expression),
    )),

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      field('operator', choice('!', '~', '-', '+')),
      field('argument', $.expression),
    )),

    binary_expression: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.INCLUSIVE_OR],
        ['^', PREC.EXCLUSIVE_OR],
        ['&', PREC.BITWISE_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    field_expression: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $.expression),
        field('operator', choice('.', '->', '->*', '.*')),
      )),
      field('field', $._member_identifier),
    ),

    parenthesized_expression: $ => seq(
      '(',
      choice($.expression, $.comma_expression, $.compound_statement),
      ')',
    ),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(', commaSep(choice($.expression, $.compound_statement)), ')'),

    _classref: $ => choice(
      seq(
        optional(field('class_modifier', $.class_modifier)),
        $._class_name,
      ),
      $._gtop_class,
      $._gins_class,
      $.class_specifier,
      $.struct_specifier,
      $.union_specifier,
      $.enum_specifier,

    ),

    this: $ => 'this',

    qualified_identifier: $ => choice(
      seq(
        '::',
        field('name', choice(
          $.identifier,
          $.operator_declarator,
          $.destructor_name,
        )),
      ),
      seq(
        field('scope', $._namespace_identifier),
        '::',
        field('name', choice(
          $.identifier,
          $.operator_declarator,
          $.destructor_name,
          $.qualified_identifier,
        ))
      ),
    ),

    null: _ => choice('NULL', 'nullptr'),

    integer_literal: _ => token(choice(
      /[0-9]+/,
      /0[xX][a-fA-F0-9]+/,
      /0[xX][a-fA-F0-9]+[LUlu]/,
    )),

    string_literal: $ => seq(
      choice('L"', '"'),
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    identifier: _ => /[a-zA-Z_\$][0-9a-zA-Z_\$]*/,
    _class_name: $ => alias($.identifier, $.class_name),
    _gtop_class: $ => alias($.identifier, $.gtop_class),
    _gins_class: $ => alias($.identifier, $.gins_class),
    _member_identifier: $ => choice(
      alias($.identifier, $.member_identifier),
      $.destructor_name,
    ),
    _namespace_identifier: $ => alias($.identifier, $.namespace_identifier),
