test/corpus/declarations.txt
================================================================================
Struct declarations
================================================================================

struct s1;

struct s2 {
  int x;
  float y;
};

--------------------------------------------------------------------------------

(translation_unit
  (struct_specifier
    name: (class_name)
  )
  (struct_specifier
    name: (class_name)
    body: (field_declaration_list
      (field_declaration
        type: (class_name)
        declarator: (identifier)
      )
      (field_declaration
        type: (class_name)
        declarator: (identifier)
      )
    )
  )
)

================================================================================
Union declarations
================================================================================

union u1;

union s2 {
  int x;
  float y;
};

--------------------------------------------------------------------------------

(translation_unit
  (union_specifier
      name: (class_name)
  )
  (union_specifier
    name: (class_name)
    body: (field_declaration_list
      (field_declaration
        type: (class_name)
        declarator: (identifier)
      )
      (field_declaration
        type: (class_name)
        declarator: (identifier)
      )
    )
  )
)

================================================================================
Enum declarations
================================================================================

enum e1;

enum e2 {
  val1,
  val2 = 5,
  val3
};

enum e3 {
  val4,
};

--------------------------------------------------------------------------------

(translation_unit
  (enum_specifier
    name: (class_name)
  )
  (enum_specifier
    name: (class_name)
    body: (enumerator_list
      (enumerator
        name: (identifier)
      )
      (enumerator
        name: (identifier)
        value: (integer_literal)
      )
      (enumerator
        name: (identifier)
      )
    )
  )
  (enum_specifier
    name: (class_name)
    body: (enumerator_list
      (enumerator
        name: (identifier)
      )
    )
  )
)

================================================================================
Class declarations containing anonymous enums
================================================================================

class Json {
  enum {
    COMPACT,
    INDENT,
  };
};

--------------------------------------------------------------------------------

(translation_unit
  (class_specifier
    name: (class_name)
    body: (field_declaration_list
      (enum_specifier
        body: (enumerator_list
          (enumerator
            name: (identifier)
          )
          (enumerator
            name: (identifier)
          )
        )
      )
    )
  )
)

================================================================================
Struct declarations containing preprocessor directives
================================================================================

struct s {
  #define A 5
  int b[a];
  #undef A
};

--------------------------------------------------------------------------------

(translation_unit
  (struct_specifier
    name: (class_name)
    body: (field_declaration_list
      (preproc_def
        name: (identifier)
        value: (preproc_arg)
      )
      (field_declaration
        type: (class_name)
        declarator: (array_declarator
          declarator: (identifier)
          size: (identifier)
        )
      )
      (preproc_call
        directive: (preproc_directive)
        argument: (preproc_arg)
      )
    )
  )
)

================================================================================
Enum declarations containing preprocessor directives
================================================================================

enum e {
	#ifdef A
	  val1 = 1,
	#else
	  val1 = 2,
	#endif
	
	#if HEY
	  val2 = 3,
	#else
	  val2 = 4,
	#endif
};

--------------------------------------------------------------------------------

(translation_unit
  (enum_specifier
    name: (class_name)
    body: (enumerator_list
      (preproc_ifdef
        name: (identifier)
        (enumerator
          name: (identifier)
          value: (integer_literal)
        )
        alternative: (preproc_else
          (enumerator
            name: (identifier)
            value: (integer_literal)
          )
        )
      )
      (preproc_if
        condition: (identifier)
        (enumerator
          name: (identifier)
          value: (integer_literal)
        )
        alternative: (preproc_else
          (enumerator
            name: (identifier)
            value: (integer_literal)
          )
        )
      )
    )
  )
)

================================================================================
Variable storage classes
================================================================================

int a;
extern int b, c;
auto int d;
register int e;
static int f;

--------------------------------------------------------------------------------

(translation_unit
  (object_definition
    type: (class_name)
    declarator: (identifier)
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (identifier)
    declarator: (identifier)
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (identifier)
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (identifier)
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (identifier)
  )
)

================================================================================
Composite-typed variable declarations
================================================================================

struct b{} c;
union { int e; } f;
enum { g, h } i;

--------------------------------------------------------------------------------

(translation_unit
  (object_definition
    type: (struct_specifier
      name: (class_name)
      body: (field_declaration_list)
    )
    declarator: (identifier)
  )
  (object_definition
    type: (union_specifier
      body: (field_declaration_list
        (field_declaration
          type: (class_name)
          declarator: (identifier)
        )
      )
    )
    declarator: (identifier)
  )
  (object_definition
    type: (enum_specifier
      body: (enumerator_list
        (enumerator
          name: (identifier)
        )
        (enumerator
          name: (identifier)
        )
      )
    )
    declarator: (identifier)
  )
)

================================================================================
Pointer variable declarations
================================================================================

char *the_string;
const char **the_strings;

--------------------------------------------------------------------------------

(translation_unit
  (object_definition
    type: (class_name)
    declarator: (pointer_declarator
      declarator: (identifier)
    )
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (pointer_declarator
      declarator: (pointer_declarator
        declarator: (identifier)
      )
    )
  )
)

================================================================================
Typedefs
================================================================================

typedef int my_int;

typedef struct {
  int x;
} *a;

typedef struct A {
	int i;
} a, b;

typedef enum {
  A,
  B,
  C
} b;

typedef void *voidpc;

typedef unsigned int;
typedef unsigned short ptrdiff_t;
typedef short charptr_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    type: (class_name)
    declarator: (identifier)
  )
  (type_definition
    type: (struct_specifier
      body: (field_declaration_list
        (field_declaration
          type: (class_name)
          declarator: (identifier)
        )
      )
    )
    declarator: (pointer_declarator
      declarator: (identifier)
    )
  )
  (type_definition
    type: (struct_specifier
      name: (class_name)
      body: (field_declaration_list
        (field_declaration
          type: (class_name)
          declarator: (identifier)
        )
      )
    )
    declarator: (identifier)
    declarator: (identifier)
  )
  (type_definition
    type: (enum_specifier
      body: (enumerator_list
        (enumerator
          name: (identifier)
        )
        (enumerator
          name: (identifier)
        )
        (enumerator
          name: (identifier)
        )
      )
    )
    declarator: (identifier)
  )
  (type_definition
    type: (class_name)
    declarator: (pointer_declarator
      declarator: (identifier)
    )
  )
  (type_definition
    class_modifier: (class_modifier)
    type: (class_name)
  )
  (type_definition
    class_modifier: (class_modifier)
    type: (class_name)
    declarator: (identifier)
  )
  (type_definition
    type: (class_name)
    declarator: (identifier)
  )
)

================================================================================
Function declarations
================================================================================

int main(int argc, const char **argv);
static foo bar();

--------------------------------------------------------------------------------

(translation_unit
  (object_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        (parameter_declaration
          type: (class_name)
          declarator: (identifier)
        )
        (parameter_declaration
          type: (class_name)
          declarator: (pointer_declarator
            declarator: (pointer_declarator
              declarator: (identifier)
            )
          )
        )
      )
    )
  )
  (object_definition
    storage_class_specifier: (storage_class_specifier)
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
  )
)

================================================================================
Function definitions
================================================================================

void * do_stuff(int arg1) {
  return 5;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (pointer_declarator
      declarator: (function_declarator
        declarator: (identifier)
        parameters: (parameter_list
          (parameter_declaration
            type: (class_name)
            declarator: (identifier)
          )
        )
      )
    )
    body: (compound_statement
      (return_statement
        (integer_literal)
      )
    )
  )
)

================================================================================
Qualified constructor and destructor definitions in preprocessor
================================================================================

#ifndef __CTGEN_H__
#define __CTGEN_H__

CTGen::CTGen() {
  this->Init(NULL);
}

CTGen::~CTGen() {
  this->Term();
}

#endif

--------------------------------------------------------------------------------

(translation_unit
  (preproc_ifdef
    name: (identifier)
    (preproc_def
      name: (identifier)
    )
    (function_definition
      declarator: (function_declarator
        declarator: (qualified_declarator
          scope: (identifier)
          name: (identifier)
        )
        parameters: (parameter_list)
      )
      body: (compound_statement
        (expression_statement
          (call_expression
            function: (field_expression
              argument: (this)
              field: (member_identifier)
            )
            arguments: (argument_list
              (null)
            )
          )
        )
      )
    )
    (function_definition
      declarator: (function_declarator
        declarator: (qualified_declarator
          scope: (identifier)
          name: (destructor_name
            name: (class_name))
        )
        parameters: (parameter_list)
      )
      body: (compound_statement
        (expression_statement
          (call_expression
            function: (field_expression
              argument: (this)
              field: (member_identifier)
            )
            arguments: (argument_list)
          )
        )
      )
    )
  )
)

================================================================================
Local array declarations
================================================================================

int main() {
  char the_buffer[the_size];
  char the_other_buffer[];
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (object_definition
        type: (class_name)
        declarator: (array_declarator
          declarator: (identifier)
          size: (identifier)
        )
      )
      (object_definition
        type: (class_name)
        declarator: (array_declarator
          declarator: (identifier)
        )
      )
    )
  )
)

================================================================================
Inline method definitions
================================================================================

struct S {
  int f;

 private:
  int getF1() { return f; }
};

--------------------------------------------------------------------------------

(translation_unit
  (struct_specifier
    name: (class_name)
    body: (field_declaration_list
      (field_declaration
        type: (class_name)
        declarator: (identifier)
      )
      (access_specifier)
      (function_definition
        type: (class_name)
        declarator: (function_declarator
          declarator: (identifier)
          parameters: (parameter_list)
        )
        body: (compound_statement
          (return_statement
            (identifier)
          )
        )
      )
    )
  )
)

================================================================================
Classes with inheritance
================================================================================

class A : public B {};
class C : protected D {};

--------------------------------------------------------------------------------

(translation_unit
  (class_specifier
    name: (class_name)
    (base_class_clause
      access_specifier: (access_specifier)
      (class_name)
    )
    body: (field_declaration_list)
  )
  (class_specifier
    name: (class_name)
    (base_class_clause
      access_specifier: (access_specifier)
      (class_name)
    )
    body: (field_declaration_list)
  )
)

================================================================================
Operator overload declarations
================================================================================

bool A::operator!=(A other) {
  return !(*this == other);
}
bool A::operator ==(A other) {
  return i == other.i;
}

A::operator int() {
  return i;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        name: (operator_declarator)
      )
      parameters: (parameter_list
        (parameter_declaration
          type: (class_name)
          declarator: (identifier)
        )
      )
    )
    body: (compound_statement
      (return_statement
        (unary_expression
          argument: (parenthesized_expression
            (binary_expression
              left: (pointer_expression
                argument: (this)
              )
              right: (identifier)
            )
          )
        )
      )
    )
  )
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        name: (operator_declarator)
      )
      parameters: (parameter_list
        (parameter_declaration
          type: (class_name)
          declarator: (identifier)
        )
      )
    )
    body: (compound_statement
      (return_statement
        (binary_expression
          left: (identifier)
          right: (field_expression
            argument: (identifier)
            field: (member_identifier)
          )
        )
      )
    )
  )
  (function_definition
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        name: (conversion_declarator
          type: (class_name)))
      parameters: (parameter_list)
    )
    body: (compound_statement
      (return_statement
        (identifier)
      )
    )
  )
)

================================================================================
Function call operator declarations
================================================================================

class Callable {
public:
  int operator()() { return 1; }
  int operator()(int value);
};

int Callable::operator()(int value) {
  return value;
}

--------------------------------------------------------------------------------

(translation_unit
  (class_specifier
    name: (class_name)
    body: (field_declaration_list
      (access_specifier)
      (function_definition
        type: (class_name)
        declarator: (function_declarator
          declarator: (operator_declarator)
          parameters: (parameter_list))
        body: (compound_statement
          (return_statement
            (integer_literal))))
      (field_declaration
        type: (class_name)
        declarator: (function_declarator
          declarator: (operator_declarator)
          parameters: (parameter_list
            (parameter_declaration
              type: (class_name)
              declarator: (identifier)))))))
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        name: (operator_declarator))
      parameters: (parameter_list
        (parameter_declaration
          type: (class_name)
          declarator: (identifier))))
    body: (compound_statement
      (return_statement
        (identifier)))))

================================================================================
Destructor declarations and explicit calls
================================================================================

class Resource {
public:
  ~Resource() {}
};

Resource::~Resource() {}

void destroy(Resource value, Resource *pointer) {
  value.~Resource();
  pointer->~Resource();
  Resource::~Resource();
}

--------------------------------------------------------------------------------

(translation_unit
  (class_specifier
    name: (class_name)
    body: (field_declaration_list
      (access_specifier)
      (function_definition
        declarator: (function_declarator
          declarator: (destructor_name
            name: (class_name))
          parameters: (parameter_list))
        body: (compound_statement))))
  (function_definition
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        name: (destructor_name
          name: (class_name)))
      parameters: (parameter_list))
    body: (compound_statement))
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        (parameter_declaration
          type: (class_name)
          declarator: (identifier))
        (parameter_declaration
          type: (class_name)
          declarator: (pointer_declarator
            declarator: (identifier)))))
    body: (compound_statement
      (expression_statement
        (call_expression
          function: (field_expression
            argument: (identifier)
            field: (destructor_name
              name: (class_name)))
          arguments: (argument_list)))
      (expression_statement
        (call_expression
          function: (field_expression
            argument: (identifier)
            field: (destructor_name
              name: (class_name)))
          arguments: (argument_list)))
      (expression_statement
        (call_expression
          function: (qualified_identifier
            scope: (namespace_identifier)
            name: (destructor_name
              name: (class_name)))
          arguments: (argument_list))))))

================================================================================
GUI Class declarations
================================================================================

class mydlg : public GCDialog {
  GCHBoxLayout {
    GCListView layerLST;
    GCVBoxLayout {
      GCLabel { OnCreate() { text = "fill pattern"; }};
      GCListBox fillLST;
    };
    GCVBoxLayout {
      GCLabel { OnCreate() { text = "line style (list & combo)"; }};
      GCListBox lstLST;
      GCComboBox lstCMB;
    };
  };
};

void mydlg::lstCMB::OnCreate() {}

void mydlg::layerLST.fillLST::OnCreate() {}

--------------------------------------------------------------------------------

(translation_unit
  (class_specifier
    name: (class_name)
    (base_class_clause
      access_specifier: (access_specifier)
      (class_name)
    )
    body: (field_declaration_list
      (gins_definition
        type: (gins_class)
        (gins_definition
          type: (class_name)
          declarator: (identifier)
        )
        (gins_definition
          type: (gins_class)
          (gins_definition
            type: (gins_class)
            (gins_attributes_definition
              declarator: (function_declarator
                declarator: (identifier)
                parameters: (parameter_list)
              )
              body: (compound_statement
                (expression_statement
                  (assignment_expression
                    left: (identifier)
                    right: (string_literal
                      (string_content)
                    )
                  )
                )
              )
            )
          )
          (gins_definition
            type: (class_name)
            declarator: (identifier)
          )
        )
        (gins_definition
          type: (gins_class)
          (gins_definition
            type: (gins_class)
            (gins_attributes_definition
              declarator: (function_declarator
                declarator: (identifier)
                parameters: (parameter_list)
              )
              body: (compound_statement
                (expression_statement
                  (assignment_expression
                    left: (identifier)
                    right: (string_literal
                      (string_content)
                    )
                  )
                )
              )
            )
          )
        (gins_definition
          type: (class_name)
          declarator: (identifier)
          )
        (gins_definition
          type: (class_name)
            declarator: (identifier)
          )
        )
      )
    )
  )
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        instance: (instance_name
          (identifier)
        )
        name: (identifier)
      )
      parameters: (parameter_list)
    )
    body: (compound_statement)
  )
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (qualified_declarator
        scope: (identifier)
        instance: (instance_name
          (identifier)
          (instance_name
            (identifier)
          )
        )
        name: (identifier)
      )
      parameters: (parameter_list)
    )
    body: (compound_statement)
  )
)

================================================================================
Static type definitions without object declarators
================================================================================

static struct StrParaRec { int value; };
static class StrParaList { int count; };

--------------------------------------------------------------------------------

(translation_unit
  (storage_class_specifier)
  (struct_specifier
    (class_name)
    (field_declaration_list
      (field_declaration (class_name) (identifier))))
  (storage_class_specifier)
  (class_specifier
    (class_name)
    (field_declaration_list
      (field_declaration (class_name) (identifier)))))
